[tool.poetry]
name = "detoxpy"
version = "0.1.0"
description = "A tool to rename directories/files that contain unsafe characters"
authors = ["Alyetama <malyetama@pm.me>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
detox = 'detoxpy:cli.main'
detoxpy = 'detoxpy:cli.main'